# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yml  rust-toolchain.toml
.cargo/: config.toml
configuration/: base.yml  local.yml  production.yml
landing-page/: package-lock.json  package.json
landing-page/src/app/: page.tsx
landing-page/src/app/__tests__/: page.test.tsx
landing-page/src/components/: Scene.tsx
migrations/: 20250522102647_make_status_not_null_in_subscriptions.sql  20250618074738_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configurations.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  new_suscriber.rs  subscriber_email.rs  subscriber_name.rs  suscriber_email.rs
src/routes/: mod.rs  newsletter.rs  subscription_confirms.rs  subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  mod.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription.rs  subscription_confirms.rs
