[package]
name = "z2p"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = {version="0.10.1", features = ["redis-pool", "redis-session-native-tls"]}
actix-web = "4.11.0"
actix-web-flash-messages = {version="0.5.0", features = ["cookies"]}
anyhow = "1.0.98"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = "0.4.41"
claim = "0.5.0"
config = "0.15.11"
env_logger = "0.11.8"
fake = "4.3.0"
hex = "0.4.3"
hmac = "0.12.1"
htmlescape = "0.3.1"
linkify = "0.10.0"
log = "0.4.27"
once_cell = "1.21.3"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.140"
sha2 = "0.10.9"
sha3 = "0.10.8"
thiserror = "2.0.12"
tokio = { version =" 1.45.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.18"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = ["tls-native-tls", "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["json", "rustls-tls", "cookies"]

# [dependencies.actix-session]
# # We are using an unreleased version of `actix-session` that provides a more
# # composable API for session storage backends + TLS/auth support
# # when using the Redis backend
# git = "https://github.com/actix/actix-extras"
# branch = "master"
# features = ["redis-rs-tls-session"]

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
tokio = { version = "1.45.0", features = ["rt", "macros"] }
wiremock = "0.6.3"

